More sections: creative coding, installations, music

--- a/creative_coding.html
+++ b/creative_coding.html
@@ -48,6 +48,16 @@
 		  	<h1>Joaquín Cerviño</h1>
 		  	<p>Musician, sound artist</p>
 			</div>
+			<div>
+				<h2> Wave table generator with L-systems</h1>
+				<p>
+				 Check <a href="https://github.com/ioadeer/lsystemwavetable">Github repo</a>
+				</p>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/uvSoMslFnkg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<h2> Synth based on Eduardo Reck's Miranda Chaosynth </h2>
+				<p> Implementation of the Chaosynth, a granular synthesizer which employs a Cellular Automaton as a sequencer</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/1KoX72J3qFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+			</div>
 		</div>
 		<!-- Footer -->
 		<footer class="page-footer font-small special-color-dark pt-4 fixed-bottom">
