--- a/installations.html
+++ b/installations.html
@@ -48,6 +48,11 @@
 		  	<h1>Joaquín Cerviño</h1>
 		  	<p>Musician, sound artist</p>
 			</div>
+			<div>
+				<h2> WaveSpace installation </h2>
+				<p> An audiovisual and interactive installation developed as a collaboration with artist Guillermo Lechón. It was set on Acéfala Galería, Buenos Aires, Argentina, on April 2018.</p>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/izoKV_8kkGU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 		</div>
 		<!-- Footer -->
 		<footer class="page-footer font-small special-color-dark pt-4 fixed-bottom">
