--- a/music.html
+++ b/music.html
@@ -48,6 +48,12 @@
 		  	<h1>Joaquín Cerviño</h1>
 		  	<p>Musician, sound artist</p>
 			</div>
+			<div>
+				<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=1653172984/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://joaquincervino.bandcamp.com/album/xenolinguistics">Xenolinguistics by Joaquin Cerviño</a></iframe>
+				<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=4033611196/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://joaquincervino.bandcamp.com/album/en-hommage">en hommage à 刀根 康尚 by Joaquin Cerviño</a></iframe>
+				<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=4147295244/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://joaquincervino.bandcamp.com/album/cendre">cendre by Joaquin Cerviño</a></iframe>
+				<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/294145405&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+			</div>
 		</div>
 		<!-- Footer -->
 		<footer class="page-footer font-small special-color-dark pt-4 fixed-bottom">
