--- a/creative_coding.html
+++ b/creative_coding.html
@@ -12,6 +12,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script src="./js/myscript.js"></script>
 </head>
 <body>
 
@@ -63,7 +64,7 @@
 		<footer class="page-footer font-small special-color-dark pt-4 fixed-bottom">
 		
 		  <!-- Footer Elements -->
-		  <div class="container">
+		  <div class="container" id="reg">
 		
 		    <!-- Social buttons -->
 				<div class="social-buttons-list">
