--- a/installations.html
+++ b/installations.html
@@ -52,7 +52,57 @@
 			<div>
 				<h2> WaveSpace installation </h2>
 				<p> An audiovisual and interactive installation developed as a collaboration with artist Guillermo Lechón. It was set on Acéfala Galería, Buenos Aires, Argentina, on April 2018.</p>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/izoKV_8kkGU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/izoKV_8kkGU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+			<div class="row mt-2">
+			</div>
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  			<ol class="carousel-indicators">
+  			  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+  			  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+  			  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  			  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  			  <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+  			  <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+  			  <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+  			  <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+  			</ol>
+  			<div class="carousel-inner">
+  			  <div class="carousel-item active">
+  			    <img class="d-block w-100" src="src/DSC_0185.JPG" alt="First slide">
+  			  </div>
+  			  <div class="carousel-item">
+  			    <img class="d-block w-100" src="src/DSC_0191.JPG" alt="Second slide">
+  			  </div>
+  			  <div class="carousel-item">
+  			    <img class="d-block w-100" src="src/DSC_0192.JPG" alt="Third slide">
+  			  </div>
+  			  <div class="carousel-item">
+  			    <img class="d-block w-100" src="src/DSC_0200.JPG" alt="First slide">
+  			  </div>
+  			  <div class="carousel-item">
+  			    <img class="d-block w-100" src="src/DSC_0227.JPG" alt="Second slide">
+  			  </div>
+  			  <div class="carousel-item">
+  			    <img class="d-block w-100" src="src/DSC_0238.JPG" alt="Third slide">
+  			  </div>
+  			  <div class="carousel-item">
+  			    <img class="d-block w-100" src="src/DSC_0240.JPG" alt="Third slide">
+  			  </div>
+  			  <div class="carousel-item">
+  			    <img class="d-block w-100" src="src/DSC_0193.JPG" alt="Third slide">
+  			  </div>
+  			</div>
+  			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  			  <span class="sr-only">Previous</span>
+  			</a>
+  			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+  			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  			  <span class="sr-only">Next</span>
+  			</a>
 			</div>
 		</div>
 		<!-- Footer -->
