--- a/creative_coding.html
+++ b/creative_coding.html
@@ -54,10 +54,16 @@
 				<p>
 				 Check <a href="https://github.com/ioadeer/lsystemwavetable">Github repo</a>
 				</p>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/uvSoMslFnkg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uvSoMslFnkg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<div class="row mt-4">
+				</div>
 				<h2> Synth based on Eduardo Reck's Miranda Chaosynth </h2>
 				<p> Implementation of the Chaosynth, a granular synthesizer which employs a Cellular Automaton as a sequencer</p>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/1KoX72J3qFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1KoX72J3qFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
 			</div>
 		</div>
 		<!-- Footer -->
