--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="bootstrap-social.css">
 	<link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a82dd6d5ea.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -41,6 +40,12 @@
 				 <li class="nav-item">
 				 	<a class="nav-link" href="#">Blog</a>
 				 </li>
+				<li class="nav-link">
+					<a class="git-ic mr-3" role="button" href="https://github.com/ioadeer"><i class="fab fa-lg fa-github"></i></a>
+					<a class="git-ic mr-3" role="button" href="https://joaquincervino.bandcamp.com"><i class="fab fa-lg fa-bandcamp"></i></a>
+					<a class="git-ic mr-3" role="button" href="https://soundcloud.com/cjoakin"><i class="fab fa-lg fa-soundcloud"></i></a>
+					<a class="git-ic mr-3" role="button" href="https://www.instagram.com/ioadeer/"><i class="fab fa-lg fa-instagram"></i></a>
+				</li>
  				</ul>
 		</div>
 
@@ -54,20 +59,21 @@
 		<footer class="page-footer font-small special-color-dark pt-4 fixed-bottom">
 		
 		  <!-- Footer Elements -->
-		  <div class="container" id="reg">
+		  <div class="container content-desktop" id="reg">
 		
 		    <!-- Social buttons -->
+				<!--
 				<div class="social-buttons-list">
 		    	<ul  class="list-unstyled list-inline text-center" >
 		    	  <li class="list-inline-item">
-		    	    <a href="https://joaquincervino.bandcamp.com" class="btn-floating btn-fb mx-1">
-		    	      <i class="fab fa-bandcamp"> </i>
+							<a href="https://joaquincervino.bandcamp.com" class="btn-floating btn-fb mx-1"> 
+								<i class="fab fa-bandcamp"> </i> 
 		    	    </a>
 		    	  </li>
 		    	  <li class="list-inline-item">
 		    	    <a href="https://github.com/ioadeer" class="btn-floating btn-tw mx-1">
 		    	      <i class="fab fa-github"> </i>
-		    	    </a>
+							</a> 
 		    	  </li>
 		    	  <li class="list-inline-item">
 		    	    <a href="https://soundcloud.com/cjoakin" class="btn-floating btn-gplus mx-1">
@@ -81,6 +87,7 @@
 		    	  </li>
 		    	</ul>
 				</div>
+				-->
 		    <!-- Social buttons -->
 		
 		  </div>
