--- a/installations.html
+++ b/installations.html
@@ -38,7 +38,7 @@
 				 	<a class="nav-link" href="./installations.html">Installations</a>
 				 </li>
 				 <li class="nav-item">
-				 	<a class="nav-link" href="#">Blog</a>
+				 	<a class="nav-link" href="https://ioadeer.github.io/blog">Blog</a>
 				 </li>
 					<li class="nav-link">
 						<a class="git-ic mr-3" role="button" href="https://github.com/ioadeer"><i class="fab fa-lg fa-github"></i></a>
