--- a/installations.html
+++ b/installations.html
@@ -76,28 +76,28 @@
   			</ol>
   			<div class="carousel-inner">
   			  <div class="carousel-item active">
-  			    <img class="d-block w-100" src="src/DSC_0185.JPG" alt="First slide">
+  			    <img class="d-block w-100" src="src/compressed_0185.jpg" alt="First slide">
   			  </div>
   			  <div class="carousel-item">
-  			    <img class="d-block w-100" src="src/DSC_0191.JPG" alt="Second slide">
+  			    <img class="d-block w-100" src="src/compressed_0191.jpg" alt="Second slide">
   			  </div>
   			  <div class="carousel-item">
-  			    <img class="d-block w-100" src="src/DSC_0192.JPG" alt="Third slide">
+  			    <img class="d-block w-100" src="src/compressed_0192.jpg" alt="Third slide">
   			  </div>
   			  <div class="carousel-item">
-  			    <img class="d-block w-100" src="src/DSC_0200.JPG" alt="First slide">
+  			    <img class="d-block w-100" src="src/compressed_0200.jpg" alt="First slide">
   			  </div>
   			  <div class="carousel-item">
-  			    <img class="d-block w-100" src="src/DSC_0227.JPG" alt="Second slide">
+  			    <img class="d-block w-100" src="src/compressed_0227.jpg" alt="Second slide">
   			  </div>
   			  <div class="carousel-item">
-  			    <img class="d-block w-100" src="src/DSC_0238.JPG" alt="Third slide">
+  			    <img class="d-block w-100" src="src/compressed_0238.jpg" alt="Third slide">
   			  </div>
   			  <div class="carousel-item">
-  			    <img class="d-block w-100" src="src/DSC_0240.JPG" alt="Third slide">
+  			    <img class="d-block w-100" src="src/compressed_0240.jpg" alt="Third slide">
   			  </div>
   			  <div class="carousel-item">
-  			    <img class="d-block w-100" src="src/DSC_0193.JPG" alt="Third slide">
+  			    <img class="d-block w-100" src="src/compressed_0193.jpg" alt="Third slide">
   			  </div>
   			</div>
   			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
